[package]
name = "pearl"
description = "ShellHub Agent written in Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
websocket = { package = "tokio-tungstenite", version = "*" }
ssh = { package = "russh", version = "0.43.0" }
log = "0.4.20"
anyhow = "1.0.86"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
